Fix widths to ensure no massive white space

--- a/themes/otp/less/_dropdown.less
+++ b/themes/otp/less/_dropdown.less
@@ -63,7 +63,7 @@
 			}
 
 			.col {
-				width: 33.33333333%;
+				width: 33.33%;
 				float: left;
 				padding-right: 2.75rem;
 				
