--- a/themes/otp/less/_masonry-content.less
+++ b/themes/otp/less/_masonry-content.less
@@ -50,7 +50,7 @@
 		//
 		// content tile
 		//
-		width: 33.3333333%;
+		width: 33.3%;
 		float: left;
 		color: @white;
 		min-height: 270px;
@@ -68,7 +68,7 @@
         }
 
         @media screen and (max-width: 980px) {
-            width: 50%;
+            width: 49.9%;
         }
 
 
@@ -455,7 +455,7 @@
 		}
 
         @media screen and (max-width: 980px) {
-            width: 50%;
+            width: 49.9%;
             padding: 1.875rem 2rem 1.875rem 2.000rem;
         }
 
@@ -626,14 +626,14 @@
 	@media screen and (max-width: 1024px) {
 		.tile-c {
 			&.half {
-				width: 33.33333333%;
+				width: 33.3%;
 			}
 		}
 	}
 	
 	@media screen and (max-width: 980px) {
 		.tile-c {
-			width: 50%;
+			width: 49.9%;
 			padding-left: 1rem;
 			padding-right: 1rem;
 
@@ -800,7 +800,7 @@ li.token-input-input-token-mac {
 
 li.token-input-input-token-mac input {
   border: 0;
-  width: 100px;
+  width: 200px !important;
   padding: 3px;
   background-color: transparent;
   margin: 0;
